internal/gatewayapi/testdata/conflicting-policies.in.yaml
envoyproxy:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    name: test
    namespace: envoy-gateway-system
  spec:
    mergeGateways: true
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: default
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - hostname: "*.192.168.0.15.nip.io"
      name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    name: mfqjpuycbgjrtdww
    namespace: default
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - hostname: qccbahgo.qccbahgo
      name: http
      port: 80
      protocol: HTTP
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    name: bdkzlmibsivuiqav
    namespace: default
  spec:
    hostnames:
    - ntjxuedx.192.168.0.15.nip.io
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      namespace: default
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          type: PathPrefix
          value: /
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    name: mfqjpuycbgjrtdww
    namespace: default
  spec:
    hostnames:
    - qccbahgo.qccbahgo
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: mfqjpuycbgjrtdww
      namespace: default
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          type: PathPrefix
          value: /
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: cors-example
    namespace: default
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: mfqjpuycbgjrtdww
    cors:
      allowOrigins:
      - "http://*.foo.com"
      allowMethods:
      - PUT
      - GET
      - POST
      - DELETE
      - PATCH
      - OPTIONS
      maxAge: 600s
      allowCredentials: true
clientTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: ClientTrafficPolicy
  metadata:
    namespace: default
    name: target-gateway
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: mfqjpuycbgjrtdww
      namespace: default
    timeout:
      http:
        requestReceivedTimeout: "5s"
